# corvantricht

./: .gitignore  Makefile  README.md  corvantricht.cabal  gallery.yaml  site.hs  stack.yaml
pages/: 404.md  contact.md  de-kunstschilder.md  de-pottenbakker.md  de-restaurateur.md  index.html  schilderijen.html
static/scss/: corvantricht.scss
templates/: about.html  default.html  page.html  paintings.html
