name:                corvantricht
version:             0.1.0.0
synopsis:            Website voor Cor van Tricht
homepage:            http://www.corvantricht.nl
license:             PublicDomain
author:              Matthias Pronk
maintainer:          mail@masida.nl
copyright:           Cor van Tricht
build-type:          Simple
cabal-version:       >=1.10

executable site
  main-is:             site.hs
  build-depends:       base
                     , hakyll
                     , bytestring
                     , filepath
                     , yaml
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded
